<resources>
    <string name="app_name">The Word Game</string>
    <string name="launcher_textview_version">Version</string>
    <string name="launcher_updatedialog_text">Looking for updates...</string>
    <string name="launcher_updatedialog_updateavailable_title">Update available!</string>
    <string name="launcher_updatedialog_updateavailable_message">There is an update available.\nPlease update the game so you have all new features.</string>
    <string name="main_button_play">Play</string>
    <string name="main_textview_info">A NESAT Studio game</string>
    <string name="main_button_options">Settings</string>
    <string name="main_button_credits">Credits</string>
    <string name="main_dialog_translationwarning_title">Warning</string>
    <string name="main_dialog_translationwarning_content">You´re current device language is:</string>
    <string name="main_dialog_translationwarning_content2">For this language only the menus are translated.</string>
    <string name="main_dialog_translationwarning_content3">The main game is still in English.</string>
    <string name="main_dialog_translationwarning_button_pos">OKAY</string>
    <string name="help_textview_headline">Help</string>
    <string name="help_textview_page1_helpline1">What is The Word Game?</string>
    <string name="help_textview_page1_helpline2">The Word Game is a game with words.</string>
    <string name="help_textview_page1_helpline3">There are four different challenging games.</string>
    <string name="help_textview_page1_helpline4">You will get more information about the games</string>
    <string name="help_textview_page1_helpline5">at the next pages. </string>
    <string name="help_textview_page1_helpline6"> </string>
    <string name="help_textview_page2_helpline1">Gamemode: LogicAnswer</string>
    <string name="help_textview_page2_helpline2">You get a short information. </string>
    <string name="help_textview_page2_helpline3">You have to find another word that matches with.</string>
    <string name="help_textview_page2_helpline4">For example: </string>
    <string name="help_textview_page2_helpline5">rot + yellow + green + blue + purple </string>
    <string name="help_textview_page2_helpline6">Answer: Rainbow  </string>
    <string name="help_textview_page3_helpline1">Gamemode: 2 Pics 1 Word</string>
    <string name="help_textview_page3_helpline2">This mode is currently locked.</string>
    <string name="help_textview_page3_helpline3"> </string>
    <string name="help_textview_page3_helpline4"> </string>
    <string name="help_textview_page3_helpline5"> </string>
    <string name="help_textview_page3_helpline6"> </string>
    <string name="help_textview_page4_helpline1">Gamemode: Just one Word</string>
    <string name="help_textview_page4_helpline2">You see one word.</string>
    <string name="help_textview_page4_helpline3">You have to find 5 words</string>
    <string name="help_textview_page4_helpline4">which matches with the start word.</string>
    <string name="help_textview_page4_helpline5">For example: alcohol</string>
    <string name="help_textview_page4_helpline6">wine, vodka, whiskey, sparkling wine, beer</string>
    <string name="help_textview_page5_helpline1">Update and feedback</string>
    <string name="help_textview_page5_helpline2">I would be glad if you tell me your opinion about my app.</string>
    <string name="help_textview_page5_helpline3">When you click on Rate in the settings you can send me a mail.</string>
    <string name="help_textview_page5_helpline4">Thanks :) </string>
    <string name="help_textview_page5_helpline5"> </string>
    <string name="help_textview_page5_helpline6"> </string>
    <string name="help_textview_page_default">PAGE</string>
    <string name="help_textview_page1">Page 1/5</string>
    <string name="help_textview_page2">Page 2/5</string>
    <string name="help_textview_page3">Page 3/5</string>
    <string name="help_textview_page4">Page 4/5</string>
    <string name="help_textview_page5">Page 5/5</string>
    <string name="help_info_stopped">STOPPED</string>
    <string name="help_button_previous">Previous</string>
    <string name="help_button_next">Next</string>
    <string name="help_button_back">BACK</string>
    <string name="cselector_button_logicword">LOGICWORD</string>
    <string name="cselector_button_2Pics1Word">2 PICS - 1 WORD</string>
    <string name="cselector_button_justoneword">JUST ONE WORD</string>
    <string name="cselector_textview_progress_def">Progress (0 / 0)</string>
    <string name="cselector_progress_1">Progress ( </string>
    <string name="cselector_progress_2"> / </string>
    <string name="cselector_textview_headline">Game Mode</string>
    <string name="cselector_button_back">BACK</string>
    <string name="options_button_help">Help</string>
    <string name="options_button_theme">Select Theme</string>
    <string name="options_button_back">BACK</string>
    <string name="options_button_reset">RESET</string>
    <string name="options_button_musicOn">Music</string>
    <string name="options_dialog_reset_title">CONFIRM RESET</string>
    <string name="options_dialog_reset_message_p1">RESET YOUR GAME :</string>
    <string name="options_dialog_reset_message_p2">BUCKS :</string>
    <string name="options_dialog_reset_message_p3">LOGICWORD LEVEL :</string>
    <string name="options_dialog_reset_message_p5">JUST ONE WORD LEVEL :</string>
    <string name="options_dialog_reset_positivebutton">YES</string>
    <string name="options_dialog_reset_negativebutton">NO</string>
    <string name="options_dialog_reset_toast">RESET SUCCESSFUL</string>
    <string name="options_headline">Settings</string>
    <string name="options_checkbox_sounds">Sounds</string>
    <string name="logicword_textview_headline">Level</string>
    <string name="logicword_textview_leveltext">LEVELTEXT</string>
    <string name="logicword_textview_line">-------------------------</string>
    <string name="logicword_button_check">CHECK</string>
    <string name="logicword_edittext_answer_content">Answer</string>
    <string name="logicword_button_back">BACK</string>
    <string name="logicword_textview_bucks">Bucks</string>
    <string name="logicword_textview_bucksvalue_default">0</string>
    <string name="logicword_levelview_level">Level</string>
    <string name="logicword_level_level_1">BLUE + RED</string>
    <string name="logicword_level_level_2">4 + 17</string>
    <string name="logicword_level_level_3">21</string>
    <string name="logicword_level_level_4">MMXVII</string>
    <string name="logicword_level_level_5">NACL</string>
    <string name="logicword_level_level_6">CODE SALT TO LEET</string>
    <string name="logicword_level_level_7">LEVEL</string>
    <string name="logicword_level_level_8">SOMTHNG IS WRONG</string>
    <string name="logicword_level_level_9">GOLDEN STATE</string>
    <string name="logicword_level_level_10">YES</string>
    <string name="logicword_level_level_11">EMC²</string>
    <string name="logicword_level_level_12">911</string>
    <string name="logicword_level_level_13">13</string>
    <string name="logicword_level_level_14">… --- …</string>
    <string name="logicword_level_level_15">NOW TRANSLATE … --- …</string>
    <string name="logicword_level_level_16">CASINO</string>
    <string name="logicword_level_level_17">SIRI</string>
    <string name="logicword_level_level_18">BUT THERE IS ONE MORE THING</string>
    <string name="logicword_level_level_19">1337</string>
    <string name="logicword_level_level_20">GOOGLE</string>
    <string name="logicword_level_level_21">INTERNET</string>
    <string name="logicword_level_level_22">HOFSTADTER</string>
    <string name="logicword_level_level_23">MIKE AND</string>
    <string name="logicword_level_level_24">COMPUTER + TABLET</string>
    <string name="logicword_level_level_25">VAULT-TEC</string>
    <string name="logicword_level_level_26">QWERTZ/QWERTY</string>
    <string name="logicword_level_level_27">THE CAT IS DEAD</string>
    <string name="logicword_level_level_28">I´M IN HALO AND WINDOWS</string>
    <string name="logicword_level_level_29">BROCODE</string>
    <string name="logicword_level_level_30">FRANKLIN + MICHAEL + TREVOR</string>
    <string name="logicword_level_level_31">BILL CLINTON</string>
    <string name="logicword_level_level_32">HILLARY CLINTON</string>
    <string name="logicword_level_level_33">DONALD</string>
    <string name="logicword_level_level_34">CALL THEPRESIDENT</string>
    <string name="logicword_level_level_35">MUHAMMED ALI</string>
    <string name="logicword_level_level_36">SILLICON VALLEY</string>
    <string name="logicword_level_level_37">WINDOWS</string>
    <string name="logicword_level_level_38">CHARLIE HARPER</string>
    <string name="logicword_level_level_39">ANSWER OF EVERYTHING</string>
    <string name="logicword_level_level_40">MAGIC STICK</string>
    <string name="logicword_level_level_41">__________</string>
    <string name="logicword_level_level_42">COUNT</string>
    <string name="logicword_level_level_43">MY FATHER WAS A DRINKER</string>
    <string name="logicword_level_level_44">3.14159265</string>
    <string name="logicword_level_level_45">2/4, 3/4, 4/4</string>
    <string name="logicword_level_level_46">S3XY</string>
    <string name="logicword_level_level_47">1776 - 2076</string>
    <string name="logicword_level_level_48">MY NAME IS HONEYCOMB11.</string>
    <string name="logicword_level_level_49">ALIBI / MAESTRO</string>
    <string name="logicword_level_level_50"></string>
    <string name="logicword_answer_level_1">PURPLE </string>
    <string name="logicword_answer_level_2">21 </string>
    <string name="logicword_answer_level_3">BLACKJACK </string>
    <string name="logicword_answer_level_4">2017 </string>
    <string name="logicword_answer_level_5">SALT </string>
    <string name="justoneword_textview_levelview">LEVEL</string>
    <string name="justoneword_textview_bucksview">BUCKS</string>
    <string name="justoneword_textview_bucksvalue_default">0</string>
    <string name="justoneword_textview_mainword">MAINWORD</string>
    <string name="justoneword_textview_answer1">ANSWER1</string>
    <string name="justoneword_textview_answer2">ANSWER2</string>
    <string name="justoneword_textview_answer3">ANSWER3</string>
    <string name="justoneword_textview_answer4">ANSWER4</string>
    <string name="justoneword_textview_answer5">ANSWER5</string>
    <string name="justoneword_button_check">CHECK</string>
    <string name="justoneword_button_back">BACK</string>
    <string name="credits_headline">Credits</string>
    <string name="credits_programming_headline">Programming</string>
    <string name="credits_programmingassistance_headline">Programming assistance</string>
    <string name="credits_levelassistance_headline">Level assistance</string>
    <string name="credits_music_headline">MUSIC</string>
    <string name="credits_button_back">BACK</string>
    <string name="credits_name_niklasenglmeier">Niklas Englmeier, NESAT</string>
    <string name="credits_name_kilianbetzl">Kilian Betzl</string>
    <string name="credits_name_nicoschott">Nico Schott</string>
    <string name="credits_name_benediktschmitt">Benedikt Schmitt</string>
    <string name="credits_name_sakuramurayama">Sakura Murayama</string>
    <string name="credits_name_xrenon">Music by Xrenon The MusicMage</string>
    <string name="credits_name_xrenon_2">First Try</string>
    <string name="credits_name_parents_teachers">My parents and some of my teachers</string>
    <string name="reset_title">RESET</string>
    <string name="reset_logicword_1">LogicWord Level :</string>
    <string name="reset_twopicsoneword_1">TwoPicsOneWord Level :</string>
    <string name="reset_justoneword_1">JustOneWord Level :</string>
    <string name="reset_bucks_1">Current bucks :</string>
    <string name="reset_button_confirm">CONFIRM</string>
    <string name="reset_button_back">BACK</string>
</resources>