<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="nesat.thewordgame.JustOneWordActivityK"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/levelview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:text="@string/justoneword_textview_levelview"
        android:textAlignment="center"
        android:textColor="@color/LightBlue200"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/bucksTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:fontFamily="casual"
            android:text="@string/justoneword_textview_bucksview"
            android:textAlignment="textStart"
            android:textColor="@color/LightBlue500"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bucksValueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:fontFamily="casual"
            android:text="@string/justoneword_textview_bucksvalue_default"
            android:textAlignment="textEnd"
            android:textColor="@color/LightBlue500"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/startword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:text="@string/justoneword_textview_mainword"
        android:textAlignment="center"
        android:textColor="@color/LightBlue300"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:text="@string/justoneword_textview_answer1"
        android:textAlignment="center"
        android:textColor="@color/greenA400"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:text="@string/justoneword_textview_answer2"
        android:textAlignment="center"
        android:textColor="@color/greenA400"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:text="@string/justoneword_textview_answer3"
        android:textAlignment="center"
        android:textColor="@color/greenA400"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/answer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:text="@string/justoneword_textview_answer4"
        android:textAlignment="center"
        android:textColor="@color/greenA400"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/answer5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:text="@string/justoneword_textview_answer5"
        android:textAlignment="center"
        android:textColor="@color/greenA400"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/answeredittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="casual"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/LightBlue300"
        android:textColorHint="@color/LightBlue300"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttoncheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/LightBlue300"
        android:fontFamily="casual"
        android:text="@string/justoneword_button_check"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/justonewordBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:adSize="320x50"
        app:adUnitId="ca-app-pub-8865326875373213/9324763555" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/LightBlue400"
        android:fontFamily="casual"
        android:text="@string/justoneword_button_back"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

</LinearLayout>